<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Feature Settings -->
    <string name="pref_title_features">Features</string>
    <string name="pref_summary_features">Select features to enable/disable</string>
    <string name="pref_title_feature_bgimage">Background Image</string>
    <string name="pref_title_feature_forecast">Forecast</string>
    <string name="pref_title_feature_hrforecast">Hourly Forecast</string>
    <string name="pref_title_feature_charts">Charts</string>
    <string name="pref_title_feature_summary">Weather Summary</string>
    <string name="pref_title_feature_details">Weather Details</string>
    <string name="pref_title_feature_uv">UV</string>
    <string name="pref_title_feature_beaufort">Beaufort</string>
    <string name="pref_title_feature_aqindex">Air Quality Index</string>
    <string name="pref_title_feature_moonphase">Moon Phase</string>
    <string name="pref_title_feature_sunphase">Sun Phase</string>
    <string name="pref_title_feature_radar">Weather Radar</string>
    <string name="pref_title_feature_locpanelimg">Location Panel Image</string>

    <!-- Widget -->
    <string name="widget_configure_prompt">Configure Widget</string>
    <string name="widget_loading_prompt">Loading…</string>
    <string name="title_activity_widget_config">Widget Preferences</string>
    <string name="pref_title_bgcolor">Background</string>
    <!-- String: "Default" -->
    <string name="label_color_currentconditions" translatable="false">@string/label_style_panda</string>
    <string name="label_color_custom">Custom</string>
    <string name="label_color_transparent">Transparent</string>
    <string name="pref_title_bgcolorcode">Background Color</string>
    <string name="pref_title_txtcolorcode">Text Color</string>
    <string name="pref_title_bgstyle">Background Style</string>
    <string name="label_style_fullbg">Full Background</string>
    <string name="label_style_panda">Default</string>
    <!-- Can be shortened to 'Color' -->
    <string name="label_style_pendingcolor">Weather Color</string>
    <string name="label_style_light">Light</string>
    <string name="label_style_dark">Dark</string>
    <string name="locname_pref_title">Location Name</string>
    <string name="locname_pref_summary">Hide location name from widget</string>
    <string name="settingsbtn_pref_title">Settings Button</string>
    <string name="settingsbtn_pref_summary">Hide settings button from widget</string>
    <string name="refreshbtn_pref_title">Refresh Button</string>
    <string name="refreshbtn_pref_summary">Hide refresh button from widget</string>
    <string name="clock_pref_title">Clock</string>
    <string name="calendar_pref_title">Calendar</string>
    <string name="pref_title_fcastoption">Forecast</string>
    <string name="label_fcast_full">Daily Forecast and Hourly Forecast (if available)</string>
    <string name="label_fcast_daily">Daily Forecast</string>
    <string name="label_fcast_hourly">Hourly Forecast (if available)</string>
    <string name="pref_title_tap2switch">Tap Action</string>
    <string name="pref_tap2switch_summaryOn">Tap to switch forecast</string>
    <string name="pref_tap2switch_summaryOff">Open app</string>
    <!-- Forecast Graphs -->
    <string name="label_nodata">NO DATA</string>
    <string name="pref_title_widgetgraphtype">Forecast Type</string>

    <string name="pref_category_timeanddate">Time and Date</string>
    <string name="pref_title_timezone">Time zone</string>
    <string name="pref_timezone_summaryoff">Use system time zone for time and date</string>
    <string name="pref_timezone_summaryon">Use location time zone for time and date</string>
    <string name="pref_location">Location</string>
    <string name="pref_item_gpslocation">Current GPS Location</string>
    <string name="prompt_setup_app_first">Please setup application first</string>
    <string name="prompt_max_locations_allowed">Maximum of five locations allowed</string>

    <string name="pref_category_customsize">Icon and Text Size</string>
    <string name="pref_title_textsize">Text Size</string>
    <string name="pref_title_iconsize">Icon Size</string>

    <!-- Widget Service -->
    <string name="message_widgetservice_running">Widget update service is running</string>
    <string name="pref_title_foreground_service">Widget Updater Service</string>
    <string name="pref_summary_foreground_service">Enable service to update weather widgets and notifications</string>
    <string name="pref_title_ignore_batt_opts">Ignore Battery Optimization</string>
    <string name="pref_summary_ignore_batt_opts">Disable background service restriction if widgets and notifications don\'t update</string>

    <!-- LineView -->
    <string name="label_series">Series</string>

    <!-- In-App Updates -->
    <string name="not_channel_update_title">App Updates</string>
    <string name="prompt_update_title">Update SimpleWeather</string>
    <string name="prompt_update_available">Update available. Click to install</string>

    <!-- Support -->
    <string name="pref_category_support">Support</string>

    <!-- Feedback -->
    <string name="pref_title_feedback">Feedback</string>
    <string name="pref_summary_feedback">Report any bugs or suggestions to improve the app</string>
    <!-- Rate / Review -->
    <string name="pref_title_rateandreview">Rate and Review</string>
    <string name="pref_summary_rateandreview">Like the app? Help support by providing a review</string>

    <!-- Translate -->
    <string name="pref_title_translate">Translate</string>
    <string name="pref_summary_translate">Help translate the app</string>

    <!-- SplitInstall Prompts -->
    <string name="splitlang_start_install">Starting install for language pack…</string>
    <string name="splitlang_installing">Installing language pack…</string>
    <string name="splitlang_downloading">Downloading language pack…</string>
    <string name="splitlang_failure">Failed to install language pack</string>

    <!-- Daily Notification -->
    <string name="not_channel_name_dailynotification">Daily Notification</string>
    <string name="pref_title_time">Time</string>
    <string name="pref_summary_off">Off</string>
    <string name="pref_summary_on">On</string>

    <!-- Precipitation Notification -->
    <string name="not_channel_name_precipnotification">Precipitation Notification</string>
    <!-- Example: 80% chance of rain in 2 hours -->
    <!-- (%1$d) -> Percentage | (%2$s) -> Time in minutes or hours -->
    <string name="precipitation_text_format">%1$d%% chance of rain in %2$s</string>
    <string name="precipitation_nexthour_text_format">%1$d%% chance of rain in the next hour</string>
    <string name="precipitation_minutely_starting_text_format">Rain will start in about %1$s</string>
    <string name="precipitation_minutely_stopping_text_format">Rain will stop in about %1$s</string>

    <!-- Widget Labels -->
    <string name="label_widget_weather_1x1">Weather (1x1)</string>
    <string name="label_widget_weather_clock_2x2">Weather + Clock (2x2)</string>
    <string name="label_widget_weather_4x1">Weather (4x1)</string>
    <string name="label_widget_weather_clock_4x2">Weather + Clock (4x2)</string>
    <string name="label_widget_weather_date_4x1">Weather + Date (4x1)</string>
    <string name="label_widget_weather_2x2">Weather (2x2)</string>
    <string name="label_widget_weather_4x2">Weather (4x2)</string>
    <string name="label_widget_weather_4x4">Weather (4x4)</string>
    <string name="label_widget_weather_clock_4x3">Weather + Clock (4x3)</string>
    <string name="label_widget_weather_3x1">Weather (3x1)</string>
    <string name="label_widget_weather_forecast_4x2">Weather Forecast (4x2)</string>

</resources>